Small alignement issue fixed.

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ p,
 ul {
     font-size: 1.4rem;
     max-width: 800px;
+    width: 100%;
     margin: 0 auto 1rem;
     text-align: left;
 }
